Add simple layout with box colors

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header class="site_header">
+    <header class="site_header hv_60">
         <nav class="navigation">
 
         </nav>
@@ -23,7 +26,7 @@
     <!-- /.site_header -->
 
     <main class="site_main">
-        <div class="section_container">
+        <div class="section_container hv_80">
             <section class="grid">
                 <div class="grid_img"></div>
                 <div class="grid_text"></div>
@@ -32,10 +35,18 @@
             <!-- /.grid -->
         </div>
         <!-- /.section_container -->
+        <div class="section_container hv_40">
+            <div class="new_adventure">
+
+
+            </div>
+        </div>
+
+
     </main>
     <!-- /.site_main -->
 
-    <footer class="site_footer">
+    <footer class="site_footer hw_60">
 
     </footer>
     <!-- /.site_footer -->
