Add row navbar site

--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
 </head>
 
 <body>
-    <header class="site_header hv_60">
+    <header class="site_header hv_70">
         <nav class="navigation">
+            <div class="logo">
+                <img src="./img/logo.svg" alt="Logo Discord">
+
+            </div>
+            <ul>
+                <li>Scarica</li>
+                <li>Perchè Discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+            </ul>
+            <div class="access">
+                <button>
+                    <a href="#accedi_page">Accedi</a>
+                </button>
+            </div>
+            
 
         </nav>
         <!-- /.navigation -->
