Add Text banner and row buttons

--- a/index.html
+++ b/index.html
@@ -31,11 +31,25 @@
                     <a href="#accedi_page">Accedi</a>
                 </button>
             </div>
-            
+
 
         </nav>
         <!-- /.navigation -->
+
         <div class="text_banner">
+            <h2>Il tuo posto per parlare</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora enim omnis quidem soluta nihil
+                reiciendis excepturi nam alias facilis vitae sunt eos vero voluptate laudantium nulla.
+            </p>
+            <button>
+                <a href="">Scarica per Mac</a>
+
+            </button>
+            <button>
+                <a href="">Apri Discord nel tuo Broswer</a>
+
+            </button>
 
         </div>
         <!-- /.text_banner -->
