--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora enim omnis quidem soluta nihil
                 reiciendis excepturi nam alias facilis vitae sunt eos vero voluptate laudantium nulla.
             </p>
-            <button>
-                <a href="">Scarica per Mac</a>
+            <button class=".btn_light" >
+                <a class="text_dark" href=""><span id="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
 
             </button>
-            <button>
-                <a href="">Apri Discord nel tuo Broswer</a>
+            <button class="bg_dark">
+                <a class="text_light" href="">Apri Discord nel tuo Broswer</a>
 
             </button>
 
