Add first section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora enim omnis quidem soluta nihil
                 reiciendis excepturi nam alias facilis vitae sunt eos vero voluptate laudantium nulla.
             </p>
-            <button class=".btn_light" >
+            <button class=".btn_light">
                 <a class="text_dark" href=""><span id="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
 
             </button>
@@ -58,9 +58,17 @@
 
     <main class="site_main">
         <div class="section_container hv_80">
-            <section class="grid">
-                <div class="grid_img"></div>
-                <div class="grid_text"></div>
+            <section class="grid_row clearfix">
+                <div class="grid_img big_col">
+                    <img src="./img/item1.svg" alt="">
+                </div>
+                <div class="grid_text sm_col text_dark">
+
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare </h2>
+                    <span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat commodi natus autem sint amet nesciunt nisi odio, saepe eligendi eos ut, incidunt illo dolor numquam, quam vero. Unde, reprehenderit id.
+                    </span >
+                </div>
 
             </section>
             <!-- /.grid -->
