Complete footer and first revision

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
                 <img src="./img/logo.svg" alt="Logo Discord">
 
             </div>
-            <ul>
-                <li>Scarica</li>
-                <li>Perchè Discord</li>
-                <li>Nitro</li>
-                <li>Sicurezza</li>
-                <li>Assistenza</li>
-            </ul>
+            <div class="nav">
+                <ul>
+                    <li><a href="">Scarica</a> </li>
+                    <li><a href="">Perchè Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+            </div>
+
             <div class="access">
                 <button>
                     <a href="#accedi_page">Accedi</a>
@@ -42,8 +45,8 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora enim omnis quidem soluta nihil
                 reiciendis excepturi nam alias facilis vitae sunt eos vero voluptate laudantium nulla.
             </p>
-            <button class=".btn_light">
-                <a class="text_dark" href=""><span id="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
+            <button  class=".btn_light">
+                <a class="text_dark" href=""><span class="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
 
             </button>
             <button class="bg_dark">
@@ -155,11 +158,11 @@
 
         <!-- /.section_technology -->
 
-        <div class="section_container hv_40">
+        <div class="section_container hv_30">
             <div class="new_adventure">
                 <h3>Prova a iniziare la tua nuova avventura</h3>
-                <button class="btn_light">
-                    <a class="text_dark" href=""><span id="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
+                <button class="btn_blue">
+                    <a class="text_light" href=""><span class="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
 
                 </button>
 
@@ -194,6 +197,7 @@
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
+                            </ul>
 
 
                         </div>
@@ -206,6 +210,7 @@
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
+                            </ul>
                         </div>
                         <div class="col float_lf">
                             <ul class="foot_ul">
@@ -222,6 +227,7 @@
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
+                            </ul>
                         </div>
                         <div class="col float_lf">
                             <ul class="foot_ul">
@@ -232,6 +238,7 @@
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
                                 <li><a href="">Scarica</a></li>
+                            </ul>
                         </div>
                     </div>
 
@@ -239,10 +246,6 @@
 
             </div>
             <hr>
-            <div>
-
-            </div>
-
         </div>
         <nav class="navigation end">
             <div class="logo">
