Complete after revision

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </div>
 
             <div class="access">
-                <button>
+                <span>
                     <a href="#accedi_page">Accedi</a>
-                </button>
+                </span>
             </div>
 
 
@@ -45,14 +45,14 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora enim omnis quidem soluta nihil
                 reiciendis excepturi nam alias facilis vitae sunt eos vero voluptate laudantium nulla.
             </p>
-            <button  class=".btn_light">
+            <span  class="btn_light m_top">
                 <a class="text_dark" href=""><span class="arrow_down"> &DownArrow;</span>Scarica per Mac</a>
 
-            </button>
-            <button class="bg_dark">
+            </span>
+            <span class="bg_dark m_top">
                 <a class="text_light" href="">Apri Discord nel tuo Broswer</a>
 
-            </button>
+            </span>
 
         </div>
         <!-- /.text_banner -->
